# Running-OpenCV3

./: README.md
Chapter8/prac8_1/: README.md
Chapter8/prac8_4/: CMakeLists.txt  README.md  main.cpp
Chapter8/prac8_5/: CMakeLists.txt  README.md  main.cpp
Chapter8/prac8_6/: CMakeLists.txt  README.md  main.cpp
Chapter8/prac8_7/: CMakeLists.txt  README.md  main.cpp
Chapter8/prac8_8_scrfd/: CMakeLists.txt  README.md  main.cpp  scrfd_trt.cpp  scrfd_trt.h
Chapter8/prac8_8_scrfd/models/: --fp16  scrfd_2.5g_bnkps_shape640x640.trt
Chapter8/prac8_thread/: README.md  main.cpp
러닝! opencv3/: README.md
러닝! opencv3/practice8/: CMakeLists.txt  README.md
러닝! opencv3/practice8_1/: README.md  main.cpp
